--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ on:
       - .github/workflows/build.yaml
 
 env:
-  DOCKER_IMAGE: paulefl/example_big_app
+  DOCKER_IMAGE: paulefl/test
   # uncomment if using 
   # DOCKER_IMAGE: ${{ secrets.DOCKERHUB_REPO }}
 
@@ -29,11 +29,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    #- name: Login to DockerHub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     # For Reflex to build a container,
     # injecting your environment variables at 
