--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -55,4 +55,4 @@ ENV REFLEX_DB_URL="sqlite:///reflex.db"
 STOPSIGNAL SIGKILL
 
 # Always apply migrations before starting the backend.
-CMD ["sh", "-c", "reflex db migrate && reflex run --env prod --backend-only"]
+CMD ["sh", "-c", "reflex db init && reflex db migrate && reflex run --env prod --backend-only"]
